Skill effects optimization + specific config
- Spare Parts: added product and ingredient blacklists

- Green Thumb: added block blacklist

- Sheperd's Blessing: added entity blacklist

Other changes:
-> Keepsake now displays the activation icon on respawn.
Max level is now 9.

->Spare Parts doesnt works on creative now